--- a/src/components/PlayerAnswer/PlayerAnswer.scss
+++ b/src/components/PlayerAnswer/PlayerAnswer.scss
@@ -1,4 +1,16 @@
 .PlayerAnswer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+  border-bottom: 2px solid lightgray;
+
+  .box {
+    width: 100px;
+    height: 100px;
+    border: 4px solid black;
+  }
 }
