--- a/src/components/PlayerResult/PlayerResult.scss
+++ b/src/components/PlayerResult/PlayerResult.scss
@@ -1,4 +1,15 @@
 .PlayerResult {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 100%;
   height: 100%;
+
+  .box {
+    width: 100px;
+    height: 100px;
+    background-color: indianred;
+    border: 4px solid black;
+  }
 }
