--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -27,7 +27,7 @@
     .player-container {
       display: flex;
       flex-direction: column;
-      width: 40%;
+      width: 100%;
       height: 100%;
 
       .player-section {
@@ -36,8 +36,14 @@
     }
 
     .editor-container {
-      width: 60%;
+      width: 800px;
       height: 100%;
     }
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .App main .editor-container {
+    width: 1000px;
   }
 }
