--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -1,8 +1,9 @@
 .Editor {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: 20px;
-
+  padding: 20px 40px;
   box-sizing: border-box;
   border-left: 2px solid lightgray;
 }
