--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -6,4 +6,20 @@
   padding: 20px 40px;
   box-sizing: border-box;
   border-left: 2px solid lightgray;
+
+  footer {
+    display: flex;
+    justify-content: flex-end;
+
+    .submit-button {
+      margin-top: 20px;
+      width: 100px;
+      height: 40px;
+      background-color: mediumseagreen;
+      color: white;
+      font-size: 16px;
+      border-radius: 4px;
+      border: none;
+    }
+  }
 }
