--- a/src/components/Output/Output.scss
+++ b/src/components/Output/Output.scss
@@ -1,4 +1,4 @@
-.PlayerAnswer {
+.Output {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,7 +6,6 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  border-bottom: 2px solid lightgray;
 
   .box {
     width: 100px;
