[feat] Get result box html from SSR-Eggy

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -36,6 +36,9 @@
       }
 
       .player-result {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 50%;
       }
     }
